--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nyoshi
 description: Coding for game and tools
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://avatars2.githubusercontent.com/u/1102002?s=460&v=4
 
 #
 # Flags below are optional
